@@ -11,6 +11,7 @@ import unittest
 from test import support
 import os
 from os import path
+from time import sleep
 
 startfile = support.get_attribute(os, 'startfile')
 
@@ -23,6 +24,10 @@ class TestCase(unittest.TestCase):
         empty = path.join(path.dirname(__file__), "empty.vbs")
         startfile(empty)
         startfile(empty, "open")
+        # Give the child process some time to exit before we finish.
+        # Otherwise the cleanup code will not be able to delete the cwd,
+        # because it is still in use.
+        sleep(0.1)
 
 def test_main():
     support.run_unittest(TestCase)
